Closed Bug 1642258 Opened 4 years ago Closed 4 years ago

role="alert" for WebRTC indicator doesn't work

Categories

(Core :: Disability Access APIs, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla79
Tracking Status
firefox-esr68 --- unaffected
firefox76 --- wontfix
firefox77 --- wontfix
firefox78 --- fixed
firefox79 --- fixed

People

(Reporter: Jamie, Assigned: Jamie)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

The legacy WebRTC sharing indicator sets role="alert" on the window element. After the fix for bug 1610596, which disallows roles other than document, dialog or application, this no longer works. Setting it on the body element (as the new indicator will do) fails for the same reason.

Bug 1610596 was necessary to comply with the ARIA spec and avoid brokenness for Orca. That's still the correct decision. However, I think it's reasonable to allow role="alert" for chrome documents.

Keywords: regression
Regressed by: 1610596
Has Regression Range: --- → yes
Blocks: 1642260

Also fixes a typo in an existing test that meant we weren't actually testing as intended.

Pushed by mzehe@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/5bbbf98b5a9c
Allow role="alert" on the body of chrome documents (but not content documents). r=MarcoZ
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla79

Comment on attachment 9153050 [details]
Bug 1642258: Allow role="alert" on the body of chrome documents (but not content documents).

Beta/Release Uplift Approval Request

  • User impact if declined: Screen reader users won't be aware of the microphone/camera/screen sharing indicator.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Straightforward change affecting a very specific area of accessibility code. Well covered by tests.
  • String changes made/needed:
Attachment #9153050 - Flags: approval-mozilla-beta?
No longer blocks: 1639993

Comment on attachment 9153050 [details]
Bug 1642258: Allow role="alert" on the body of chrome documents (but not content documents).

a11y fix for 78.0b3

Attachment #9153050 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Regressions: 1642568
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: