Bug 1642258: Allow role="alert" on the body of chrome documents (but not content documents). r=MarcoZ

Also fixes a typo in an existing test that meant we weren't actually testing as intended.

Differential Revision: https://phabricator.services.mozilla.com/D77628